[gd_scene load_steps=2 format=3 uid="uid://rxerk6xulbkl"]

[ext_resource type="Script" path="res://scripts/user_interface/PauseMenu.gd" id="1_llhgt"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_llhgt")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0.00392157, 0.00392157, 0.858824)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 700
theme_override_constants/margin_right = 700

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 27

[node name="Unpause" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "RESUME"

[node name="Save" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "SAVE"

[node name="MainMenu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "MAIN MENU"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Unpause" to="." method="_on_unpause_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenu" to="." method="_on_main_menu_pressed"]
